Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-43801

REG[4.8-5.1] OS X Font stretch doesn't work correctly

    XMLWordPrintable

Details

    • macOS
    • 586fd042345b619acceafb13e84b912863961e56

    Description

      Setting font stretch doesn't add space enough to characters and are not painted correctly.

      This is regression from Qt 4.8. Looks like It's fixed to Qt 4.8.0 in the bug QTBUG-22825. Patch doesn't apply to Qt 5 and need some other way to fix it.

      Attachments

        For Gerrit Dashboard: QTBUG-43801
        # Subject Branch Project Status CR V

        Activity

          People

            esabraha Eskil Abrahamsen Blomfeldt
            qtcomsupport Qt Support
            Votes:
            1 Vote for this issue
            Watchers:
            5 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes